[gd_scene load_steps=10 format=3 uid="uid://c22whlxirxvqy"]

[ext_resource type="Script" uid="uid://du1y1qmodf36l" path="res://scripts/minions/minion.gd" id="1_1ddg2"]
[ext_resource type="Shader" path="res://resources/circle_cutout.gdshader" id="1_b4arb"]
[ext_resource type="Texture2D" uid="uid://ovopul5l8hrj" path="res://resources/images/greta.jpg" id="3_1ddg2"]
[ext_resource type="Texture2D" uid="uid://80e3xy0r683c" path="res://resources/images/outline_battle.png" id="3_qqrhl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b4arb"]
size = Vector2(76, 77)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ll15l"]
shader = ExtResource("1_b4arb")
shader_parameter/offset = Vector2(-0.1, -0.23)
shader_parameter/zoom = 1.2

[sub_resource type="Curve" id="Curve_1ddg2"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_qqrhl"]
curve = SubResource("Curve_1ddg2")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ll15l"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 155.89
initial_velocity_max = 205.89
gravity = Vector3(0, 0, 0)
scale_min = 2.0
scale_max = 5.0
scale_curve = SubResource("CurveTexture_qqrhl")

[node name="minion" type="Control"]
custom_minimum_size = Vector2(80, 100)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_1ddg2")

[node name="collider_detector" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 0

[node name="collision" type="CollisionShape2D" parent="collider_detector"]
position = Vector2(38, 38.5)
shape = SubResource("RectangleShape2D_b4arb")

[node name="mask" type="Control" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2

[node name="character_icon" type="TextureRect" parent="mask"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_ll15l")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_1ddg2")
expand_mode = 1
stretch_mode = 6

[node name="battle_outline" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_qqrhl")
expand_mode = 1
stretch_mode = 6

[node name="damage" type="Label" parent="battle_outline"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -46.0
offset_right = 27.0
offset_bottom = -22.0
grow_vertical = 0
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="health" type="Label" parent="battle_outline"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -46.0
offset_bottom = -22.0
grow_horizontal = 0
grow_vertical = 0
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="vfx" type="Node2D" parent="."]
position = Vector2(39, 38)

[node name="boom" type="GPUParticles2D" parent="vfx"]
emitting = false
amount = 100
lifetime = 0.5
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_ll15l")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
